--- a/src/scss/base/forms/input.scss
+++ b/src/scss/base/forms/input.scss
@@ -36,6 +36,12 @@ textarea {
     &._incorrect {
         border: rem(1) solid $error !important;
     }
+    input:-webkit-autofill,
+    input:-webkit-autofill:hover,
+    input:-webkit-autofill:focus,
+    input:-webkit-autofill:active {
+        border: rem(1) solid $text_1;
+    }
 }
 
 textarea.input {
