--- a/src/scss/base/forms/input.scss
+++ b/src/scss/base/forms/input.scss
@@ -9,6 +9,20 @@ textarea {
     appearance: none;
 }
 
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+textarea:-webkit-autofill:active {
+    border: rem(1) solid $light;
+    -webkit-text-fill-color: $mainColor;
+    -webkit-box-shadow: 0 0 0px 1000px transparent inset;
+    transition: background-color 5000s ease-in-out 0s;
+}
+
 .input {
     @extend %p;
     align-items: center;
@@ -35,12 +49,6 @@ textarea {
     &._error,
     &._incorrect {
         border: rem(1) solid $error !important;
-    }
-    input:-webkit-autofill,
-    input:-webkit-autofill:hover,
-    input:-webkit-autofill:focus,
-    input:-webkit-autofill:active {
-        border: rem(1) solid $text_1;
     }
 }
 
