--- a/src/scss/_pages/home.scss
+++ b/src/scss/_pages/home.scss
@@ -30,6 +30,7 @@
         }
     }
 }
+
 .content-home {
     @include adaptiveValue("padding-bottom", 130, 20, 1920, 767.98, 1);
     @media (min-width: $tablet) {
@@ -69,9 +70,10 @@
     }
 
     &__input {
-        &:focus {
+        &:focus,
+        &._error {
             @media (min-width: $mobileSmall) {
-                border-right: none;
+                border-right: none !important;
             }
         }
         @media (min-width: $mobileSmall) {
@@ -938,271 +940,6 @@
         @include adaptiveValue("height", 425, 200);
         @include adaptiveValue("width", 425, 200);
         background: linear-gradient(223.45deg, $white -22.5%, rgba(255, 255, 255, 0) 57.85%);
-    }
-}
-
-//========================================================================================================================================================
-// MyCard ==========================================================================================================================================
-//========================================================================================================================================================
-
-.body-card {
-    &__wrapper {
-    }
-
-    &__container {
-    }
-
-    &__flex {
-        display: flex;
-        @media (max-width: $tablet) {
-            flex-wrap: wrap;
-        }
-    }
-    &__aside {
-        margin-left: 30px;
-        flex: 0 0 300px;
-        @media (min-width: em(1300)) {
-            @include adaptiveValue("margin-left", 140, 20);
-            flex: 0 0 400px;
-        }
-        @media (max-width: $tablet) {
-            flex: 1 1 100%;
-            margin-left: 0;
-            order: 1;
-            @include adaptiveValue("margin-bottom", 50, 30);
-        }
-    }
-    &__content {
-        flex: 1 1 auto;
-        min-width: 0;
-        @media (max-width: $tablet) {
-            flex: 1 1 100%;
-            order: 2;
-        }
-    }
-}
-.content-card {
-    &__wrapper {
-    }
-
-    &__title {
-        font-weight: 400;
-        @include adaptiveValue("margin-bottom", 50, 20);
-    }
-
-    &__table {
-        @include adaptiveValue("margin-bottom", 25, 20);
-        @media (max-width: 550px) {
-            overflow: auto;
-        }
-    }
-
-    &__row {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        padding: 10px 45px;
-        min-height: 95px;
-        background-color: $white;
-        border: 1px solid $light;
-        @media (max-width: 550px) {
-            width: 600px;
-        }
-        &:not(:last-child) {
-            border-bottom: none;
-        }
-        &:last-child {
-            border-radius: 0px 0px 10px 10px;
-        }
-        @extend %p;
-        color: $secondary;
-        @media (max-width: em(1300)) {
-            padding: 10px 15px;
-            min-height: 80px;
-        }
-        &_top {
-            color: $text_1;
-            border: none;
-            border-radius: 10px 10px 0px 0px;
-            background-color: rgba(15, 175, 233, 0.1);
-            min-height: 65px;
-            @media (max-width: em(1300)) {
-                min-height: 65px;
-            }
-        }
-    }
-
-    &__td {
-        padding: 0 5px;
-        &_1 {
-            flex: 0 1 440 / 1100 * 100%;
-            display: flex;
-            align-items: center;
-            span {
-                @media (max-width: $mobile) {
-                    display: none;
-                }
-                width: 38px;
-                @include adaptiveValue("margin-right", 40, 10);
-                img {
-                    max-width: 100%;
-                }
-            }
-        }
-
-        &_2 {
-            flex: 0 1 230 / 1100 * 100%;
-        }
-
-        &_3 {
-            text-align: center;
-            flex: 0 1 210 / 1100 * 100%;
-        }
-
-        &_4 {
-            text-align: right;
-            flex: 0 1 170 / 1100 * 100%;
-        }
-    }
-
-    &__bottom {
-    }
-}
-.bottom-card {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    @media (max-width: $mobile) {
-        flex-wrap: wrap;
-    }
-    &__discount {
-        display: flex;
-        align-items: center;
-        flex: 0 0 570 / 1100 * 100%;
-        @media (max-width: $mobile) {
-            flex: 1 1 100%;
-        }
-        @media (max-width: $mobileSmall) {
-            flex-wrap: wrap;
-        }
-    }
-
-    &__input {
-        &._focus {
-            @media (min-width: $mobileSmall) {
-                border-right: none;
-            }
-        }
-        @media (min-width: $mobileSmall) {
-            flex: 1 1 auto;
-            border-radius: 7px 0px 0px 7px;
-            border-right: none;
-        }
-        @media (max-width: $mobileSmall) {
-            margin-bottom: 15px;
-            flex: 1 1 100%;
-        }
-    }
-
-    &__btn {
-        @media (min-width: $mobileSmall) {
-            flex: 0 0 190px;
-            @media (max-width: em(1300)) {
-                flex: 0 0 120px;
-            }
-            @media (max-width: $mobile) {
-                flex: 0 0 190px;
-            }
-            border-radius: 0px 10px 10px 0px;
-        }
-        @media (max-width: $mobileSmall) {
-            flex: 1 1 100%;
-        }
-    }
-
-    &__text {
-        flex: 0 1 500 / 1100 * 100%;
-        @extend %p;
-        color: $text_4;
-        @media (min-width: $mobile) {
-            @include adaptiveValue("margin-left", 25, 10);
-        }
-        @media (max-width: $mobile) {
-            margin-top: 10px;
-            flex: 1 1 100%;
-        }
-    }
-}
-.aside-card {
-    &__wrapper {
-    }
-
-    &__menu {
-    }
-}
-.card {
-    &__inner {
-        margin-bottom: 20px;
-    }
-
-    &__title {
-        display: flex;
-        align-items: center;
-        min-height: 80px;
-        background-color: $blue;
-        color: $white;
-        padding: 5px 30px;
-        border-radius: 10px 10px 0 0;
-        @media (max-width: $mobile) {
-            padding: 5px 20px;
-            min-height: 65px;
-        }
-    }
-
-    &__body {
-    }
-
-    &__item {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        min-height: 65px;
-        background-color: $white;
-        color: $text_4;
-        border: 1px solid $light;
-        padding: 5px 30px;
-        @extend %p;
-        @media (max-width: $mobile) {
-            padding: 5px 20px;
-            min-height: 60px;
-        }
-        &:not(:last-child) {
-            border-bottom: none;
-        }
-        &:last-child {
-            border-radius: 0 0 10px 10px;
-        }
-        span {
-            margin-left: 3px;
-        }
-        &_active {
-            background: rgba(15, 175, 233, 0.1);
-            color: $text_1;
-        }
-    }
-
-    &__label {
-        flex: 0 1 50%;
-        padding-right: 10px;
-    }
-
-    &__price {
-        flex: 0 1 50%;
-        text-align: right;
-    }
-
-    &__btn {
-        width: 100%;
     }
 }
 
