--- a/src/scss/_pages/single.scss
+++ b/src/scss/_pages/single.scss
@@ -177,6 +177,12 @@
             }
         }
     }
+
+    &__image-ibg {
+        border-radius: rem(10);
+        overflow: hidden;
+        @include adaptiveValue("height", 420, 250);
+    }
 }
 
 //========================================================================================================================================================
@@ -325,6 +331,12 @@
         }
         .checkbox {
             width: 100%;
+            &__text {
+                span {
+                    flex: 0 0 rem(80);
+                    text-align: right;
+                }
+            }
         }
     }
 
