--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -111,6 +111,7 @@ body {
 @import "_pages/home";
 @import "_pages/single";
 @import "_pages/account";
+@import "_pages/card";
 
 //<ОСНОВНОЙ БЛОК>====================================================================================================
 .page {
