--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -112,6 +112,7 @@ body {
 @import "_pages/single";
 @import "_pages/account";
 @import "_pages/card";
+@import "_pages/checkout";
 
 //<ОСНОВНОЙ БЛОК>====================================================================================================
 .page {
